1. Now password can be a range also. 2. Fixed a bug related to password validation.

--- a/ngx-password-validator/projects/ng-password-validator/src/lib/ng-password-validator.component.html
+++ b/ngx-password-validator/projects/ng-password-validator/src/lib/ng-password-validator.component.html
@@ -1,23 +1,30 @@
 <div class="popup-window">
     <div class="heading">Password Requirement</div>
-    <div class="rule" [hidden]="!rules['password-length']"
-        [ngClass]="{'rule-pass':passwordStatus.passwordLength}">
-        Password length should be {{rules['password-length']}}.
+    <div *ngIf="rules['password']">
+        <div class="rule" [hidden]="rules['password'].type !== 'number'"
+            [ngClass]="{'rule-pass':passwordStatus['password']}">
+            Password length should be {{rules['password'].length}} characters.
+        </div>
+        <div class="rule" [hidden]="rules['password'].type !== 'range'"
+            [ngClass]="{'rule-pass':passwordStatus['password']}">
+            Password length should be {{rules['password'].min}} - {{rules['password'].max}}
+            characters.
+        </div>
     </div>
     <div class="rule" [hidden]="!rules['include-symbol']"
-        [ngClass]="{'rule-pass':passwordStatus.includeSymbol}">
+        [ngClass]="{'rule-pass':passwordStatus['include-symbol']}">
         Include Symbols:( e.g. @#$% )
     </div>
     <div class="rule" [hidden]="!rules['include-number']"
-        [ngClass]="{'rule-pass':passwordStatus.includeNumber}">
+        [ngClass]="{'rule-pass':passwordStatus['include-number']}">
         Include Numbers:( e.g.123456 )
     </div>
     <div class="rule" [hidden]="!rules['include-lowercase-characters']"
-        [ngClass]="{'rule-pass':passwordStatus.includeLowercaseCharacters}">
+        [ngClass]="{'rule-pass':passwordStatus['include-lowercase-characters']}">
         Include Lowercase Characters:(e.g. abcdefgh )
     </div>
     <div class="rule" [hidden]="!rules['include-uppercase-characters']"
-        [ngClass]="{'rule-pass':passwordStatus.includeUppercaseCharacters}">
+        [ngClass]="{'rule-pass':passwordStatus['include-uppercase-characters']}">
         Include Uppercase Characters:(e.g. ABCDEFGH )
     </div>
     <div class="success-message" [hidden]="!isSecure">
