Pro theme added

--- a/ngx-password-validator/projects/ng-password-validator/src/lib/ng-password-validator.component.html
+++ b/ngx-password-validator/projects/ng-password-validator/src/lib/ng-password-validator.component.html
@@ -1,5 +1,5 @@
 <div class="popup-window">
-    <div class="heading">Password Requirement</div>
+    <div class="heading">Password Policy</div>
     <div *ngIf="rules['password']">
         <div class="rule" [hidden]="rules['password'].type !== 'number'"
             [ngClass]="{'rule-pass':passwordStatus['password']}">
