--- a/ngx-password-validator/projects/ng-password-validator/src/lib/variable.scss
+++ b/ngx-password-validator/projects/ng-password-validator/src/lib/variable.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $black: #000;
 $green: #28a745;
 $grey: #6a6a6a;
+$dark-red: #9c0404;
 
 $light-grey: #d3d3d3;
 $light-black: rgba(0, 0, 0, 0.4);
