--- a/ngx-password-validator/projects/ng-password-validator/src/lib/ng-password-validator.component.scss
+++ b/ngx-password-validator/projects/ng-password-validator/src/lib/ng-password-validator.component.scss
@@ -28,45 +28,74 @@
         box-shadow: 0 1px 5px 0px $light-black;
     }
 
-    .popup-window {
-        .heading {
-            font-size: $heading-font-size;
-            color: $black;
-            margin-bottom: 0.5rem;
-            font-weight: 700;
-        }
-
-        .rule {
-            font-size: $body-font-size;
-            color: $grey;
-
-            &::before {
-                content: "\a";
-                width: 5px;
-                height: 5px;
-                border-radius: 50%;
-                background: $grey;
-                display: inline-block;
-                vertical-align: sub;
-                margin: 0 5px 6px 0;
+    &.popup {
+        .popup-window {
+            .heading {
+                font-size: $heading-font-size;
+                color: $black;
+                margin-bottom: 0.5rem;
+                font-weight: 700;
             }
 
-            &.rule-pass {
-                text-decoration: line-through;
-                color: $light-grey;
+            .rule {
+                font-size: $body-font-size;
+                color: $grey;
+                line-height: 17px;
 
                 &::before {
-                    background: $light-grey;
+                    content: "\a";
+                    width: 5px;
+                    height: 5px;
+                    border-radius: 50%;
+                    background: $grey;
+                    display: inline-block;
+                    vertical-align: sub;
+                    margin: 0 10px 6px 0;
+                }
+
+                &.rule-pass {
+                    text-decoration: line-through;
+                    color: $light-grey;
+
+                    &::before {
+                        background: $light-grey;
+                    }
+                }
+            }
+
+            .success-message {
+                color: $color-success;
+                text-align: center;
+                font-size: $heading-font-size;
+                margin-top: 5px;
+            }
+
+        }
+
+        &.popup-pro {
+            .popup-window {
+                .rule {
+                    &.rule-pass {
+                        color: $color-success;
+                        text-decoration: none;
+
+                        &::before {
+                            content: "\2713" !important;
+                            width: 0;
+                            height: 0;
+                            padding-right: 5px;
+                            vertical-align: inherit;
+                            background: $color-success;
+                        }
+                    }
+                }
+
+                .success-message {
+                    color: $dark-red;
                 }
             }
         }
-
-        .success-message {
-            color: $color-success;
-            text-align: left;
-            font-size: $heading-font-size;
-            margin-top: 5px;
-        }
-
     }
+
+
 }
