--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,15 +28,6 @@
     }
 }
 
-.content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 960px;
-    flex-direction: column;
-    align-items: center;
-}
-
 svg#clouds {
     position: fixed;
     bottom: -160px;
@@ -45,29 +36,36 @@ svg#clouds {
     width: 1920px;
 }
 
-label {
-    width: 100%;
-    max-width: 400px;
-    color: #2076d2;
-    margin-top: 100px;
-}
-
-input[type=text],
-input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    max-width: 400px;
-
-    &:focus {
-        border: 1px solid #2076d2;
-    }
-}
-
 .title {
     margin-left: 5px;
+}
+
+.version {
+    margin: 0 20px 0 16px;
+    font-weight: 800;
+    text-transform: lowercase;
+}
+
+.demo-container {
+    margin-top: 60px;
+}
+
+.circle-link {
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+    margin: 8px;
+    background-color: white;
+    border: 1px solid #eeeeee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: 1s ease-out;
+}
+
+.circle-link:hover {
+    transform: translateY(-0.25rem);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
