--- a/projects/ng-password-validator/src/lib/ng-password-validator.component.scss
+++ b/projects/ng-password-validator/src/lib/ng-password-validator.component.scss
@@ -40,7 +40,8 @@
             .rule {
                 font-size: $body-font-size;
                 color: $grey;
-                line-height: 17px;
+                line-height: 18px;
+                margin: 3px 0;
 
                 &::before {
                     content: "\a";
