Now user can customize Popup Heading and Success Message

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -281,6 +281,33 @@
                             </label>
                         </div>
                     </div>
+                    <div class="width form-inline">
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                                <h6 class="label">Heading :</h6>
+                            </label>
+                        </div>
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                                <input type="text" class="form-check-input w-100" name="heading"
+                                    formControlName="heading" placeholder="Heading ..">
+                            </label>
+                        </div>
+                    </div>
+                    <div class="width form-inline">
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                                <h6 class="label">Message :</h6>
+                            </label>
+                        </div>
+                        <div class="form-check-inline">
+                            <label class="form-check-label">
+                                <input type="text" class="form-check-input w-100"
+                                    name="successMessage" formControlName="successMessage"
+                                    placeholder="Success Message ..">
+                            </label>
+                        </div>
+                    </div>
                 </ng-container>
             </div>
 
