--- a/projects/ng-password-validator/src/lib/ng-password-validator.component.html
+++ b/projects/ng-password-validator/src/lib/ng-password-validator.component.html
@@ -1,5 +1,5 @@
 <div class="popup-window">
-    <div class="heading">Password Policy</div>
+    <div class="heading">{{heading}}</div>
     <div *ngIf="rules['password']">
         <div class="rule" [hidden]="rules['password'].type !== 'number'"
             [ngClass]="{'rule-pass':passwordStatus['password']}">
@@ -28,6 +28,6 @@
         Include Uppercase Characters:(e.g. ABCDEFGH )
     </div>
     <div class="success-message" [hidden]="!isSecure">
-        Awesome! Password requirement fulfilled.
+        {{successMessage}}
     </div>
 </div>
