Custum class bug fixed Readme.md file updated with latest example Demo Header download count image shield icon added

--- a/src/app/demo/demo.component.scss
+++ b/src/app/demo/demo.component.scss
@@ -62,3 +62,14 @@
     }
 
 }
+
+::ng-deep {
+    .custom-class {
+        .popup-window {
+            .heading {
+                color: red !important;
+                font-family: cursive;
+            }
+        }
+    }
+}
