--- a/projects/ng-password-validator-dev/src/app/app.component.html
+++ b/projects/ng-password-validator-dev/src/app/app.component.html
@@ -6,7 +6,8 @@
 </div>
 
 <div class="content" role="main">
-  <input type="text" id="password" name="password" placeholder="Password.." NgPasswordValidator placement="top">
+  <input type="text" id="password" name="password" placeholder="Password.." [NgPasswordValidator]="options">
+  <!-- <input type="text" id="password" name="password" placeholder="Password.." NgPasswordValidator> -->
 </div>
 
 <router-outlet></router-outlet>
