1. Tempate type added - 'inline' | 'popup', Default 'popup' 2. Now only able to pass options using [NgPasswordValidator] to minimize complexity. 3. Performance optimizations

--- a/projects/ng-password-validator-dev/src/app/app.component.html
+++ b/projects/ng-password-validator-dev/src/app/app.component.html
@@ -6,7 +6,12 @@
 </div>
 
 <div class="content" role="main">
-  <input type="text" id="password" name="password" placeholder="Password.." [NgPasswordValidator]="options">
+  <input type="text" id="password" name="password" placeholder="Password.." [NgPasswordValidator]="options"
+    (valid)="isValid($event)">
+  <input type="text" name="password" placeholder="Password..">
+  <input type="text" name="password" placeholder="Password..">
+  <input type="text" name="password" placeholder="Password..">
+  <input type="text" name="password" placeholder="Password..">
   <!-- <input type="text" id="password" name="password" placeholder="Password.." NgPasswordValidator> -->
 </div>
 
